Make loading spinner absolutely positioned to avoid relayout, and with solid background to make it more easily visible.

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -17,9 +17,16 @@ nav {
    }
 }
 
-
 .spinner-holder {
+   background: white;
+   border: 5px solid lightgray;
+   border-radius: 65px;
+   padding: 15px 10px 5px 15px;
    text-align: center;
+   position: absolute;
+   left: calc(50vw - 100px);
+   top: calc(50vh - 50px);
+   z-index: 100;
 }
 
 // Pure css spinner from https://loading.io/css/ .
@@ -27,7 +34,6 @@ nav {
   display: inline-block;
   width: 64px;
   height: 64px;
-  margin: 5px auto;
 }
 
 .spinner:after {
